@@ -1,0 +1,7 @@
+package care.data4life.sdk.util.test.annotation
+
+import org.junit.Ignore
+
+actual annotation class AndroidOnly
+actual typealias JvmOnly = Ignore
+actual typealias iOSOnly = Ignore
