@@ -1,0 +1,5 @@
+package care.data4life.sdk.util.test.annotation
+
+expect annotation class AndroidOnly()
+expect annotation class JvmOnly()
+expect annotation class iOSOnly()
