@@ -1,0 +1,7 @@
+package care.data4life.sdk.util.test.annotation
+
+import kotlin.test.Ignore
+
+actual typealias AndroidOnly = Ignore
+actual typealias JvmOnly = Ignore
+actual annotation class iOSOnly
