@@ -1,0 +1,7 @@
+package care.data4life.sdk.util.test.annotation
+
+import org.junit.Ignore
+
+actual typealias AndroidOnly = Ignore
+actual annotation class JvmOnly
+actual typealias iOSOnly = Ignore
